--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/index.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://cdn.syncfusion.com/ej2/material.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Roboto:light,regular,medium,thin,italic,mediumitalic,bold" rel='stylesheet' type='text/css'/>
 </head>
 <body>
   <app-root></app-root>
